Resolved image issue by moving folder to src, working on mobile layout in css

--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    left: 0;
+    margin: 0;
     padding-left: 20%;
     padding-right: 30%;
     background-color: #ACCAF2;
