--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -43,3 +43,55 @@ nav {
   button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
   }
+
+  @media only screen and (max-width: 600px) {
+    nav {
+      width: 100%;
+      max-height: 50px;
+      line-height: 5;
+      margin-bottom: 10px;
+      background-color: #d8d4e8;
+    }
+
+    ul {
+      max-height: fit-content;
+    }
+
+    #navlist {
+      margin-bottom: 10px;;
+    }
+
+    li {
+      display: inline;
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+    
+    a {
+      font-weight: bold;
+      color: #453873;
+      text-decoration: inherit;
+    }
+    a:hover {
+      color: #535bf2;
+    }
+  
+    button {
+      border-radius: 8px;
+      border: 1px solid transparent;
+      padding: 0.6em 1.2em;
+      font-size: 1em;
+      font-weight: 500;
+      font-family: inherit;
+      background-color: #1a1a1a;
+      cursor: pointer;
+      transition: border-color 0.25s;
+    }
+    button:hover {
+      border-color: #646cff;
+    }
+    button:focus,
+    button:focus-visible {
+      outline: 4px auto -webkit-focus-ring-color;
+    }
+  }
