--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 200%;
 }
 
 h2 {
@@ -9,6 +10,7 @@ h2 {
 }
 
 ul {
+    max-width: 100vw;
     list-style: none;
 }
 
@@ -16,19 +18,20 @@ ul {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    max-width: 1200px;
 }
 
 img {
-    min-width: 300px;
     max-width: 500px;
     border: 5px solid #ffff;
 }
 
 .desc {
-    text-align: right;
     background-color: white;
     max-width: fit-content;
     max-height: fit-content;
-    padding: 10px;
+    padding: 20px;
+
 }
